--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "simple-git-hooks": ">=2.0.3"
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
