--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -43,12 +44,9 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.1.0",
+    "husky": "^6.0.0",
     "lint-staged": ">=10",
-    "prettier": "2.2.1",
-    "simple-git-hooks": ">=2.0.3"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+    "prettier": "2.2.1"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
